--- a/Our Coffees.html
+++ b/Our Coffees.html
@@ -36,12 +36,22 @@
             <li><a>Lynx Express</a></li>
             <li><a>Coffee in a can</a></li>
             <li><a>Lynx at home</a></li>
-            good
+
         </ul>
         </nav>
         </div>
-        <div>
-            <img class="backgroundBody" src="./Images/victorian-style.jpg"/>
+        <div class="backgroundBody">
+           <div class="twoRows">
+               <div class="firstRow">
+               <video src="/Videos/Our-coffee.mp4" width="100%" autoplay loop></video>
+                </div>
+                <div class="secondRow">
+               <h2>It's free to go dairy-free</h2>
+               <p>
+                Our tasty new plant-based alternatives - Soya, Almond, Coconut and Oat - are no extra cost when you scan the Costa app in store until 3rd March 2022!* Don't have the app yet?
+               </p>
+                </div>
+           </div>
         </div>
 
     </section>
