--- a/Our Coffees.html
+++ b/Our Coffees.html
@@ -19,7 +19,7 @@
         <div class="firstNavigation">
         <nav>
             <ul>
-            <li><a href="/index.html">Lynx Cafe</a></li>
+            <li><a href="/index.html">Test</a></li>
             <li><a href="/Our Coffees.html">Our Coffees</a></li>
             <li><a href="/Our Menus.html">Our Menu</a></li>
             </ul>
