--- a/Our Coffees.html
+++ b/Our Coffees.html
@@ -12,14 +12,14 @@
     <div id="backgroundOurCoffees">
     <div class="textHeader">
     <h1>Our coffees</h1>
-    <h2> Six signature coffees that we know you'll love.</h2>
+    <h2>Six signature coffees that we know you'll love.</h2>
     </div>
     <img class="imageHeader" src="/Images/flatwhite3.png" width="50%"/>
 
         <div class="firstNavigation">
         <nav>
             <ul>
-            <li><a href="/index.html">Test</a></li>
+            <li><a href="/index.html">Lynx Cafe</a></li>
             <li><a href="/Our Coffees.html">Our Coffees</a></li>
             <li><a href="/Our Menus.html">Our Menu</a></li>
             </ul>
@@ -28,7 +28,7 @@
     </div>
     </header>
 
-    <section>
+
         <div class="secondNavigation">
         <nav>
             <ul>
@@ -41,9 +41,10 @@
         </nav>
         </div>
         <div class="backgroundBody">
+        <section>
            <div class="twoRows">
                <div class="firstRow">
-               <video src="/Videos/Our-coffee.mp4" width="100%" autoplay loop></video>
+               <video src="Videos/Our-coffee.mp4" width="100%" autoplay loop></video>
                 </div>
                 <div class="secondRow">
                <h2>It's free to go dairy-free</h2>
@@ -52,9 +53,22 @@
                </p>
                 </div>
            </div>
+        </section>
+        <section>
+    <div class="twoRows">
+        <div class="firstRow">
+        <h2>Buy 4 drinks to get 1 free</h2>
+        <p>As a member of our Costa Club, when you bring a reusable cup to use, you'll get an extra bean. It's buy 4 to get 1 free** so you'll get to your free drink faster! That's good for your pocket, and the planet. Not a member yet? Download the app here.
+        </p>
+        </div>   
+        <div class="firstRow">
+            <img width="400rem" src="/Images/reusable-coffee.jpg"/>
+        </div>    
+    </div> 
+        </section>
+
         </div>
 
-    </section>
     
     
 </body>
