--- a/Our Menus.html
+++ b/Our Menus.html
@@ -8,14 +8,25 @@
     <title>Our Menus</title>
 </head>
 <body>
-    <header>
-        <nav>
-        <ul>
-        <li><a href="/index.html">Lynx Cafe</a></li>
-        <li><a href="/Our Coffees.html">Our Coffees</a></li>
-        <li><a href="/Our Menus.html">Our Menu</a></li>
-        </ul>
-        </nav>
+    <header> 
+        <div id="backgroundOurCoffees">
+        <div class="textHeader">
+        <h1>Menu</h1>
+        <h2>Our menu’s full of the good stuff. Whatever your diet or preferences, there’s enough choice for everyone.</h2>
+        </div>
+        <img width="50%" />
+    
+            <div class="firstNavigation">
+            <nav>
+                <ul>
+                <li><a href="/index.html">Lynx Cafe</a></li>
+                <li><a href="/Our Coffees.html">Our Coffees</a></li>
+                <li><a href="/Our Menus.html">Our Menu</a></li>
+                </ul>
+                </nav>
+            </div>
+        </div>
+    
     </header>
     <h1>Our Menus</h1>
 </body>
