--- a/Our Coffees.html
+++ b/Our Coffees.html
@@ -19,9 +19,9 @@
         <div class="firstNavigation">
         <nav>
             <ul>
-            <li><a href="/index.html">Lynx Cafe</a></li>
-            <li><a href="/Our Coffees.html">Our Coffees</a></li>
-            <li><a href="/Our Menus.html">Our Menu</a></li>
+            <li><a href="/index.html"><h1>LYNX</br></h1><h2>CAFE</h2></a></li>
+            <li><a href="/Our Coffees.html"><h3>Our Coffees</h3></a></li>
+            <li><a href="/Our Menus.html"><h3>Our Menu</h3></a></li>
             </ul>
             </nav>
         </div>
