--- a/Our Coffees.html
+++ b/Our Coffees.html
@@ -32,10 +32,10 @@
         <div class="secondNavigation">
         <nav>
             <ul>
-            <li><a>Our coffees</a></li>
-            <li><a>Lynx Express</a></li>
-            <li><a>Coffee in a can</a></li>
-            <li><a>Lynx at home</a></li>
+            <li><a href="./Our Coffees.html"><h3>Our coffees</h3></a></li>
+            <li><a href="./Our Coffees/Lynx Express.html"><h3>Lynx Express</h3></a></li>
+        <li><a href="./Our Coffees/Coffee in a can.html"><h3>Coffee in a can</h3></a></li>
+            <li><a href="./Our Coffees/Lynx at home.html"><h3>Lynx at home</h3></a></li>
 
         </ul>
         </nav>
