--- a/Our Menus.html
+++ b/Our Menus.html
@@ -19,16 +19,15 @@
             <div class="firstNavigation">
             <nav>
                 <ul>
-                <li><a href="/index.html">Lynx Cafe</a></li>
-                <li><a href="/Our Coffees.html">Our Coffees</a></li>
-                <li><a href="/Our Menus.html">Our Menu</a></li>
+                <li><a href="/index.html"><h1>Lynx</h1><h2>CAFE</h2></a></li>
+                <li><a href="/Our Coffees.html"><h3>Our Coffees</h3></a></li>
+                <li><a href="/Our Menus.html"><h3>Our Menu</h3></a></li>
                 </ul>
                 </nav>
             </div>
         </div>
     
     </header>
-    <h1>Our Menus</h1>
 </body>
 </html>
 
