--- a/index.html
+++ b/index.html
@@ -8,20 +8,49 @@
     <title>Lynx Cafe</title>
 </head>
 <body>
-<header>
-    <nav>
-    <ul>
-    <li><a href="/index.html">Lynx Cafe</a></li>
-    <li><a href="/Our Coffees.html">Our Coffees</a></li>
-    <li><a href="/Our Menus.html">Our Menu</a></li>
-    </ul>
-    </nav>
-</header>
-    <h1>Linx Cafe</h1>
+    <header>
+        <div id="backgroundOurCoffees">
+        <div class="textHeader">
+        <h1>World off, coffee on</h1>
+        <h2>Recharge with our great coffee,
+            wherever, whenever</h2>
+        </div>
+        <img class="imageHeader" src="/Images/flatwhite3.png" width="50%"/>
+    
+            <div class="firstNavigation">
+            <nav>
+                <ul>
+                <li><a href="/index.html"><h1>LYNX</br></h1><h2>CAFE</h2></a></li>
+                <li><a href="/Our Coffees.html"><h3>Our Coffees</h3></a></li>
+                <li><a href="/Our Menus.html"><h3>Our Menu</h3></a></li>
+                </ul>
+                </nav>
+            </div>
+        </div>
+        </header>
 
-<section>
-    <div>
- 
+
+    <div class="backgroundBody">
+        <section>
+            <div class="twoRows">
+                <div class="firstRow">
+                <h2>Buy 4 drinks to get 1 free</h2>
+                <p>As a member of our Costa Club, when you bring a reusable cup to use, you'll get an extra bean. It's buy 4 to get 1 free** so you'll get to your free drink faster! That's good for your pocket, and the planet. Not a member yet? Download the app here.
+                </p>
+                </div>   
+                <div class="firstRow">
+                    <img width="400rem" src="/Images/reusable-coffee.jpg"/>
+                </div>    
+            </div> 
+         </section>
+
+         <section>
+             <div class="oneRow">
+            <h2>Linx Coffee is With You</h2>
+            <p>As the Nation's Favourite Coffee Shop, we are committed to supporting our customers, communities and people. Following the latest Government guidance, we’ve made changes to how we serve our coffee, introducing social distancing and enhancing our hygiene procedures to keep our store teams and customers safe.</p>
+            </div> 
+        </section>
+
 
     </div>
 
