--- a/Our Coffees/Coffee in a can.html
+++ b/Our Coffees/Coffee in a can.html
@@ -24,11 +24,21 @@
                 <li><a href="/Our Coffees.html"><h3>Our Coffees</h3></a></li>
                 <li><a href="/Our Menus.html"><h3>Our Menu</h3></a></li>
                 </ul>
-                </nav>
-            </div>
+            </nav>
         </div>
-        </header>
+        </div>
+    </header>
     
+    <div class="secondNavigation">
+        <nav>
+            <ul>
+            <li><a href="/Our Coffees.html"><h3>Our coffees</h3></a></li>
+            <li><a href="/Our Coffees/Lynx Express.html"><h3>Lynx Express</h3></a></li>
+            <li><a href="/Our Coffees/Coffee in a can.html"><h3>Coffee in a can</h3></a></li>"
+            <li><a href="/Our Coffees/Lynx at home.html"><h3>Lynx at home</h3></a></li>
+            </ul>
+        </nav>
+    </div>
 
 </body>
 </html>
