--- a/Our Coffees/Lynx Express.html
+++ b/Our Coffees/Lynx Express.html
@@ -35,8 +35,8 @@
                 <ul>
                 <li><a href="/Our Coffees.html"><h3>Our coffees</h3></a></li>
                 <li><a href="/Our Coffees/Lynx Express.html"><h3>Lynx Express</h3></a></li>
-                <li><a href=""><h3>Coffee in a can</h3></a></li>"
-                <li><a href="./Our Coffees/Lynx at home.html"><h3>Lynx at home</h3></a></li>
+                <li><a href="/Our Coffees/Coffee in a can.html"><h3>Coffee in a can</h3></a></li>"
+                <li><a href="/Our Coffees/Lynx at home.html"><h3>Lynx at home</h3></a></li>
                 </ul>
             </nav>
         </div>
@@ -46,9 +46,12 @@
              <section>
                  <div class="oneRow">
                 <h2>Irresistible coffee on the go</h2>
-                <p>We've worked hard to make sure that our Express machines serve the same barista-style coffee you'd expect to find in one of our stores, delivering an authentic coffee shop experience wherever you happen to be.
-                    Our state-of-the-art self-serve coffee bars combine our freshly ground Signature Blend beans, real milk and cutting-edge technology to deliver you a delicious drink on-the-go.
-                    So, if you fancy a latte, cappuccino or hot chocolate you can be guaranteed the freshest taste and finest ingredients, just the way it should be.</p>
+                <img src="/Images/man-coffee.jpg"/>
+                <p>We've worked hard to make sure that our Express machines serve the same barista-style coffee you'd expect to find in one of our stores, delivering an authentic coffee shop experience wherever you happen to be.</p>
+                </br></br>                    
+                <p>Our state-of-the-art self-serve coffee bars combine our freshly ground Signature Blend beans, real milk and cutting-edge technology to deliver you a delicious drink on-the-go.</p>
+                </br></br>
+                <p>So, if you fancy a latte, cappuccino or hot chocolate you can be guaranteed the freshest taste and finest ingredients, just the way it should be.</p>
                 </div> 
             </section>
     </div>
