--- a/Our Coffees/Lynx at home.html
+++ b/Our Coffees/Lynx at home.html
@@ -12,8 +12,8 @@
     <header>
         <div id="backgroundOurCoffees">
         <div class="textHeader">
-        <h1>Our coffees</h1>
-        <h2>Six signature coffees that we know you'll love.</h2>
+        <h1>At home</h1>
+        <h2>Barista-quality coffee, handcrafted by you at home.</h2>
         </div>
         <img class="imageHeader" src="/Images/flatwhite3.png" width="50%"/>
     
@@ -39,5 +39,22 @@
             </ul>
         </nav>
     </div>
+
+     
+    <div class="backgroundBody">
+        <section>
+            <div class="oneRow">
+           <h2>Coffee the Lynx way</h2>
+           <img src="/Images/latte-glass.jpg"/>
+           <p>It’s never been easier to channel your inner barista and enjoy proper Costa Coffee at home.
+            <br/><br/>
+            <p>We have a wide range of delicious blends in a variety of brewing methods for you to prepare your coffee just how you like to enjoy it at home.</p>
+            <br/><br/>
+            <p>Our At Home range offers the same iconic Signature Blend taste you'd expect to find in our stores but enjoyed at home... and in your favourite mug.</p>
+           </br></br>                    
+       </section>
+   </div>
+
+
 </body>
 </html>
