--- a/Our Menus.html
+++ b/Our Menus.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="styleSheet" href="/Style/index.css"/>
+    <script src="/myApp.js"></script>
     <title>Our Menus</title>
 </head>
 <body>
     <header> 
         <div id="backgroundOurCoffees">
         <div class="textHeader">
+        <img />
         <h1>Menu</h1>
         <h2>Our menu’s full of the good stuff. Whatever your diet or preferences, there’s enough choice for everyone.</h2>
         </div>
-        <img width="50%"/>
+        
     
             <div class="firstNavigation">
             <nav>
