--- a/Our Coffees.html
+++ b/Our Coffees.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="styleSheet" href="/Style/index.css"/>
+    <script src="/myApp.js"></script>
     <title>Our Coffees</title>
 </head>
 <body>
@@ -14,7 +15,7 @@
     <h1>Our coffees</h1>
     <h2>Six signature coffees that we know you'll love.</h2>
     </div>
-    <img class="imageHeader" src="/Images/flatwhite3.png" width="50%"/>
+    <img src="/Images/flatwhite3.png"/>
 
         <div class="firstNavigation">
         <nav>
