--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <p>As a member of our Costa Club, when you bring a reusable cup to use, you'll get an extra bean. It's buy 4 to get 1 free** so you'll get to your free drink faster! That's good for your pocket, and the planet. Not a member yet? Download the app here.
                 </p>
                 </div>   
-                <div class="firstRow">
+                <div class="secondRow">
                     <img width="400rem" src="/Images/reusable-coffee.jpg"/>
                 </div>    
             </div> 
