--- a/Our Coffees.html
+++ b/Our Coffees.html
@@ -10,15 +10,15 @@
 </head>
 <body>
     <header>
-    <div id="backgroundOurCoffees">
+    <div class="backgroundHeader">
     <div class="textHeader">
+    <img class="navigationToggle" src="/Images/menu-icon.png"/>
     <img src="/Images/flatwhite3.png"/>
     <h1>Our coffees</h1>
     <h2>Six signature coffees that we know you'll love.</h2>
     </div>
 
-
-        <div class="firstNavigation">
+    <div class="firstNavigation">
         <nav>
             <ul>
             <li><a href="/index.html"><h1>LYNX</br></h1><h2>CAFE</h2></a></li>
@@ -30,7 +30,6 @@
     </div>
     </header>
 
-
         <div class="secondNavigation">
         <nav>
             <ul>
@@ -38,7 +37,6 @@
             <li><a href="./Our Coffees/Lynx Express.html"><h3>Lynx Express</h3></a></li>
         <li><a href="./Our Coffees/Coffee in a can.html"><h3>Coffee in a can</h3></a></li>
             <li><a href="./Our Coffees/Lynx at home.html"><h3>Lynx at home</h3></a></li>
-
         </ul>
         </nav>
         </div>
@@ -56,12 +54,7 @@
                 </div>
            </div>
         </section>
-
-
         </div>
-
-    
-    
 </body>
 </html>
 
