--- a/Our Coffees/Coffee in a can.html
+++ b/Our Coffees/Coffee in a can.html
@@ -11,11 +11,11 @@
 <body>
     
     <header>
-        <div id="backgroundOurCoffees">
+        <div class="backgroundHeader">
         <div class="textHeader">
         <img class="imageHeader" src="/Images/flatwhite3.png" width="50%"/>
-        <h1>Our coffees</h1>
-        <h2>Six signature coffees that we know you'll love.</h2>
+        <h1>Coffee in a can</h1>
+        <h2>Discover our chilled range of delicious ready-to-drink coffees in a can.</h2>
         </div>
     
             <div class="firstNavigation">
