--- a/Our Coffees/Lynx Express.html
+++ b/Our Coffees/Lynx Express.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <div id="backgroundOurCoffees">
+        <div class="backgroundHeader">
         <div class="textHeader">
         <img class="imageHeader" src="/Images/flatwhite3.png" width="50%"/>
         <h1>World off, coffee on</h1>
