--- a/Our Coffees/Lynx at home.html
+++ b/Our Coffees/Lynx at home.html
@@ -11,7 +11,7 @@
 <body>
     
     <header>
-        <div id="backgroundOurCoffees">
+        <div class="backgroundHeader">
         <div class="textHeader">
         <img class="imageHeader" src="/Images/flatwhite3.png" width="50%"/>
         <h1>At home</h1>
