--- a/Our Menus.html
+++ b/Our Menus.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header> 
-        <div id="backgroundOurCoffees">
+        <div class="backgroundHeader">
         <div class="textHeader">
         <img />
         <h1>Menu</h1>
