--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header>
-        <div id="backgroundOurCoffees">
+        <div class="backgroundHeader">
         <div class="textHeader">
-        <img class="imageHeader" src="/Images/flatwhite3.png" width="50%"/>
+        <img class="imageHeader" src="/Images/flatwhite3.png"/>
     
         <h1>World off, coffee on</h1>
         <h2>Recharge with our great coffee,
@@ -52,8 +52,6 @@
             <p>As the Nation's Favourite Coffee Shop, we are committed to supporting our customers, communities and people. Following the latest Government guidance, we’ve made changes to how we serve our coffee, introducing social distancing and enhancing our hygiene procedures to keep our store teams and customers safe.</p>
             </div> 
         </section>
-
-
     </div>
 
 </section>
