--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
         <div class="backgroundHeader">
         <div class="textHeader">
+        <img class="navigationToggle" src="/Images/menu-icon.png"/>
         <img class="imageHeader" src="/Images/flatwhite3.png"/>
     
         <h1>World off, coffee on</h1>
