--- a/Our Coffees/Lynx Express.html
+++ b/Our Coffees/Lynx Express.html
@@ -12,6 +12,7 @@
     <header>
         <div class="backgroundHeader">
         <div class="textHeader">
+        <img class="navigationToggle" src="/Images/menu-icon.png"/>
         <img class="imageHeader" src="/Images/flatwhite3.png" width="50%"/>
         <h1>World off, coffee on</h1>
         <h2>Recharge with our great coffee,
