Update on 'our Menu'

--- a/Our Coffees/Lynx Express.html
+++ b/Our Coffees/Lynx Express.html
@@ -13,7 +13,7 @@
         <div class="backgroundHeader">
         <div class="textHeader">
         <img class="navigationToggle" src="/Images/menu-icon.png"/>
-        <img class="imageHeader" src="/Images/flatwhite3.png" width="50%"/>
+        <img src="/Images/flatwhite3.png" width="50%"/>
         <h1>World off, coffee on</h1>
         <h2>Recharge with our great coffee,
             wherever, whenever</h2>
