--- a/index.html
+++ b/index.html
@@ -5,15 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="styleSheet" href="/Style/index.css"/>
-    <script src="/myApp.js"></script>
+    
+
     <title>Lynx Cafe</title>
 </head>
 <body>
     <header>
         <div class="backgroundHeader">
         <div class="textHeader">
-        <img class="navigationToggle" src="/Images/menu-icon.png"/>
-        <img class="imageHeader" src="/Images/flatwhite3.png"/>
+            <div class="mobileNavigation">            
+                <nav>
+                    <ul>
+                    <li><a href="/index.html"><h2>LYNX CAFE</h2></a></li>
+                    <li><a href="/Our Coffees.html"><h2>Our Coffees</h2></a></li>
+                    <li><a href="/Our Menus.html"><h2>Our Menu</h2></a></li>
+                    </ul>
+                </nav> 
+            </div>
+        <button class="mobileMenu"><img class="navigationToggle" src="/Images/menu-icon.png"/></button>
+        <img src="/Images/flatwhite3.png"/>
     
         <h1>World off, coffee on</h1>
         <h2>Recharge with our great coffee,
@@ -27,7 +37,7 @@
                 <li><a href="/Our Coffees.html"><h3>Our Coffees</h3></a></li>
                 <li><a href="/Our Menus.html"><h3>Our Menu</h3></a></li>
                 </ul>
-                </nav>
+            </nav>
             </div>
         </div>
         </header>
@@ -63,7 +73,5 @@
 
 
 </section>
-
-
+<script src="/myApp.js"></script>
 </body>
-</html>
