--- a/Our Coffees.html
+++ b/Our Coffees.html
@@ -12,8 +12,9 @@
     <header>
     <div class="backgroundHeader">
     <div class="textHeader">
-    <img class="navigationToggle" src="/Images/menu-icon.png"/>
-    <img src="/Images/flatwhite3.png"/>
+        <button class="mobileMenu"><img class="navigationToggle" src="/Images/menu-icon.png"/></button>
+        <img src="/Images/flatwhite3.png"/>
+    
     <h1>Our coffees</h1>
     <h2>Six signature coffees that we know you'll love.</h2>
     </div>
