--- a/Our Coffees/Coffee in a can.html
+++ b/Our Coffees/Coffee in a can.html
@@ -15,7 +15,7 @@
         <div class="textHeader">
         <img class="navigationToggle" src="/Images/menu-icon.png"/>
         <img class="navigationToggle" src="/Images/menu-icon.png"/>
-        <img class="imageHeader" src="/Images/flatwhite3.png" width="50%"/>
+        <img src="/Images/flatwhite3.png" width="50%"/>
         <h1>Coffee in a can</h1>
         <h2>Discover our chilled range of delicious ready-to-drink coffees in a can.</h2>
         </div>
