--- a/Our Coffees/Lynx at home.html
+++ b/Our Coffees/Lynx at home.html
@@ -14,7 +14,7 @@
         <div class="backgroundHeader">
         <div class="textHeader">
         <img class="navigationToggle" src="/Images/menu-icon.png"/>
-        <img class="imageHeader" src="/Images/flatwhite3.png" width="50%"/>
+        <img src="/Images/flatwhite3.png" width="50%"/>
         <h1>At home</h1>
         <h2>Barista-quality coffee, handcrafted by you at home.</h2>
         </div>
