--- a/Our Menus.html
+++ b/Our Menus.html
@@ -12,6 +12,17 @@
     <header> 
         <div class="backgroundHeader">
         <div class="textHeader">
+            <div class="mobileNavigation">            
+                <nav>
+                    <ul>
+                    <li><a href="/index.html"><h2>LYNX CAFE</h2></a></li>
+                    <li><a href="/Our Coffees.html"><h2>Our Coffees</h2></a></li>
+                    <li><a href="/Our Menus.html"><h2>Our Menu</h2></a></li>
+                    </ul>
+                </nav> 
+            </div>
+        <button class="mobileMenu"><img class="navigationToggle" src="/Images/menu-icon.png"/></button>
+
         <img class="ourMenusImage" src="/Images/coffee-row3.jpg">
 
         
