--- a/Our Coffees.html
+++ b/Our Coffees.html
@@ -5,15 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="styleSheet" href="/Style/index.css"/>
-    <script src="/myApp.js"></script>
     <title>Our Coffees</title>
 </head>
 <body>
     <header>
     <div class="backgroundHeader">
     <div class="textHeader">
-        <button class="mobileMenu"><img class="navigationToggle" src="/Images/menu-icon.png"/></button>
-        <img src="/Images/flatwhite3.png"/>
+        <div id="mobileNavigation">            
+            <nav>
+                <ul>
+                <li><a href="/index.html"><h2>LYNX CAFE</h2></a></li>
+                <li><a href="/Our Coffees.html"><h2>Our Coffees</h2></a></li>
+                <li><a href="/Our Menus.html"><h2>Our Menu</h2></a></li>
+                </ul>
+            </nav> 
+        </div>
+    <button class="mobileMenu"><img class="navigationToggle" src="/Images/menu-icon.png"/></button>
+    <img src="/Images/flatwhite3.png"/>
     
     <h1>Our coffees</h1>
     <h2>Six signature coffees that we know you'll love.</h2>
@@ -56,6 +64,7 @@
            </div>
         </section>
         </div>
+        <script src="/myApp.js"></script>
 </body>
 </html>
 
