--- a/Our Coffees/Coffee in a can.html
+++ b/Our Coffees/Coffee in a can.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="styleSheet" href="/Style/index.css"/>
-    <script src="/myApp.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -47,12 +46,12 @@
         <section>
             <div class="oneRow">
            <h2>Coffee the Lynx way</h2>
-           <img src="/Images/coffee-can.jpg"/>
+           <img class="imgText" src="/Images/coffee-can.jpg"/>
            <p>Looking for a little mid-afternoon pick-me-up? Try our Costa Coffee in a can. Enjoy straight from the fridge when you’re looking for that real coffee kick.</p>
             <br/><br/>
             <p>And even better, they’re made with 30% less sugar than most ready-to-drink coffees* to release the full flavour of our Signature Mocha Italia blend. No faffing, just proper coffee in a can - all you have to do is chill, crack open and enjoy.</p>                 
        </section>
    </div>
-
+   <script src="/myApp.js"></script>
 </body>
 </html>
