--- a/Our Coffees/Lynx Express.html
+++ b/Our Coffees/Lynx Express.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="styleSheet" href="/Style/index.css"/>
-    <script src="/myApp.js"></script>
+
     <title>Document</title>
 </head>
 <body>
@@ -48,7 +48,7 @@
              <section>
                  <div class="oneRow">
                 <h2>Irresistible coffee on the go</h2>
-                <img src="/Images/man-coffee.jpg"/>
+                <img class="imgText" src="/Images/man-coffee.jpg"/>
                 <p>We've worked hard to make sure that our Express machines serve the same barista-style coffee you'd expect to find in one of our stores, delivering an authentic coffee shop experience wherever you happen to be.</p>
                 </br></br>                    
                 <p>Our state-of-the-art self-serve coffee bars combine our freshly ground Signature Blend beans, real milk and cutting-edge technology to deliver you a delicious drink on-the-go.</p>
@@ -61,6 +61,6 @@
         </div>
     
 
-    
+        <script src="/myApp.js"></script>
 </body>
 </html>
