--- a/Our Coffees/Lynx at home.html
+++ b/Our Coffees/Lynx at home.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="styleSheet" href="/Style/index.css"/>
-    <script src="/myApp.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -46,7 +45,7 @@
         <section>
             <div class="oneRow">
            <h2>Coffee the Lynx way</h2>
-           <img src="/Images/latte-glass.jpg"/>
+           <img class="imgText" src="/Images/latte-glass.jpg"/>
            <p>It’s never been easier to channel your inner barista and enjoy proper Costa Coffee at home.
             <br/><br/>
             <p>We have a wide range of delicious blends in a variety of brewing methods for you to prepare your coffee just how you like to enjoy it at home.</p>
@@ -56,6 +55,6 @@
        </section>
    </div>
 
-
+   <script src="/myApp.js"></script>
 </body>
 </html>
