--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="styleSheet" href="/Style/index.css"/>
     
-
     <title>Lynx Cafe</title>
 </head>
 <body>
     <header>
         <div class="backgroundHeader">
         <div class="textHeader">
-            <div class="mobileNavigation">            
+            <div id="mobileNavigation">            
                 <nav>
                     <ul>
                     <li><a href="/index.html"><h2>LYNX CAFE</h2></a></li>
