--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
         <button class="mobileMenu"><img class="navigationToggle" src="/Images/menu-icon.png"/></button>
         <img src="/Images/flatwhite3.png"/>
     
+        <div class="headerText">
         <h1>World off, coffee on</h1>
         <h2>Recharge with our great coffee,
             wherever, whenever</h2>
         </div>
-       
+        </div>
             <div class="firstNavigation">
             <nav>
                 <ul>
