--- a/Our Coffees.html
+++ b/Our Coffees.html
@@ -20,7 +20,10 @@
                 </ul>
             </nav> 
         </div>
-    <button class="mobileMenu"><img class="navigationToggle" src="/Images/menu-icon.png"/></button>
+
+    <button id="mobileMenu"><img class="navigationToggle" src="/Images/menu-icon.png"/></button>
+    <button id="closeMenu"><img class="navigationToggle" src="Images/close-icon.png"/></button>
+
     <img src="/Images/flatwhite3.png"/>
     
     <h1>Our coffees</h1>
