--- a/Our Menus.html
+++ b/Our Menus.html
@@ -21,8 +21,8 @@
                 </nav> 
             </div>
 
-        <button class="mobileMenu"><img class="navigationToggle" src="/Images/menu-icon.png"/></button>
-
+        <button id="mobileMenu"><img class="navigationToggle" src="/Images/menu-icon.png"/></button>
+        <button id="closeMenu"><img class="navigationToggle" src="Images/close-icon.png"/></button>
     
         <img class="ourMenusImage" src="/Images/coffee-row3.jpg">
 
@@ -32,7 +32,7 @@
         <h2>Whatever your diet or preferences,</h2> 
         <h2>there’s enough choice for everyone.</h2>
         </div>
-    </div>
+        </div>
     
         <div class="firstNavigation">
             <nav>
@@ -70,9 +70,8 @@
             </div> 
         </section>
     </div>
-  
+    <script src="/myApp.js"></script>
 </body>
-<script src="/myApp.js"></script>
 </html>
 
 
