--- a/Our Menus.html
+++ b/Our Menus.html
@@ -28,9 +28,9 @@
 
         <div class="headerText">
         <h1>Menu</h1>
-        <h2>Our menu’s full of the good stuff.</h2> 
-        <h2>Whatever your diet or preferences,</h2> 
-        <h2>there’s enough choice for everyone.</h2>
+        <h2>Our menu’s full of the good stuff.<br/>
+        Whatever your diet or preferences,<br/>
+        there’s enough choice for everyone.</h2>
         </div>
         </div>
     
