--- a/Our Coffees.html
+++ b/Our Coffees.html
@@ -24,10 +24,13 @@
     <button id="mobileMenu"><img class="navigationToggle" src="/Images/menu-icon.png"/></button>
     <button id="closeMenu"><img class="navigationToggle" src="Images/close-icon.png"/></button>
 
-    <img src="/Images/flatwhite3.png"/>
+    <img class="headerImage" src="/Images/flatwhite3.png"/>
     
+     
+    <div class="headerText">
     <h1>Our coffees</h1>
     <h2>Six signature coffees that we know you'll love.</h2>
+    </div>
     </div>
 
     <div class="firstNavigation">
