--- a/Our Coffees/Lynx Express.html
+++ b/Our Coffees/Lynx Express.html
@@ -12,11 +12,25 @@
     <header>
         <div class="backgroundHeader">
         <div class="textHeader">
-        <img class="navigationToggle" src="/Images/menu-icon.png"/>
-        <img src="/Images/flatwhite3.png" width="50%"/>
-        <h1>World off, coffee on</h1>
-        <h2>Recharge with our great coffee,
-            wherever, whenever</h2>
+            <div id="mobileNavigation">            
+                <nav>
+                    <ul>
+                    <li><a href="/index.html"><h2>LYNX CAFE</h2></a></li>
+                    <li><a href="/Our Coffees.html"><h2>Our Coffees</h2></a></li>
+                    <li><a href="/Our Menus.html"><h2>Our Menu</h2></a></li>
+                    </ul>
+                </nav> 
+            </div>
+
+        <button id="mobileMenu"><img class="navigationToggle" src="/Images/menu-icon.png"/></button>
+        <button id="closeMenu"><img class="navigationToggle" src="Images/close-icon.png"/></button>
+
+        <img class="headerImage" src="/Images/flatwhite3.png" />
+        <div class="headerText">
+        <h1>Lynx Express
+        <h2>Costa Express is the quickest and easiest way to enjoy a delicious, quality cup of Costa Coffee on the go.</h1>
+        </h2>
+        </div>
         </div>
       
             <div class="firstNavigation">
