--- a/Our Menus.html
+++ b/Our Menus.html
@@ -14,7 +14,7 @@
             <div id="mobileNavigation">            
                 <nav>
                     <ul>
-                    <li><a href="/index.html"><h2>LYNX CAFE</h2></a></li>
+                    <li><a href="/index.html"><h2>Lynx Cafe</h2></a></li>
                     <li><a href="/Our Coffees.html"><h2>Our Coffees</h2></a></li>
                     <li><a href="/Our Menus.html"><h2>Our Menu</h2></a></li>
                     </ul>
