--- a/Our Coffees/Coffee in a can.html
+++ b/Our Coffees/Coffee in a can.html
@@ -23,7 +23,7 @@
             </div>
 
         <button id="mobileMenu"><img class="navigationToggle" src="/Images/menu-icon.png"/></button>
-        <button id="closeMenu"><img class="navigationToggle" src="Images/close-icon.png"/></button>
+        <button id="closeMenu"><img class="navigationToggle" src="/Images/close-icon.png"/></button>
 
 
         <img class="headerImage" src="/Images/flatwhite3.png"/>
